--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -50,12 +50,20 @@
       <p>Welcome, Register to get Enter</p>
       <span style="color:red" class=" registration-error hidden"></span>
       <hr />
-      Name: <input type="text" class="form-control rgr-frm-name">
-      Email: <input type="email" class="form-control rgr-frm-email">
-      Password: <input type="password" class="form-control rgr-frm-password">
-      Password confirmation: <input type="password" class="form-control rgr-frm-password-confirm">
+      <div class="form-group">
+        Name: <input type="text" class="form-control rgr-frm-name">
+      </div>
+      <div class="form-group">
+        Email: <input type="email" class="form-control rgr-frm-email">
+      </div>
+      <div class="form-group">
+        Password: <input type="password" class="form-control rgr-frm-password">
+      </div>
+      <div class="form-group">
+        Password confirmation: <input type="password" class="form-control rgr-frm-password-confirm">
+      </div>
 
-      <a href="javascript:void(0)" class="btn btn-info hdr-registration-form-submit">Submit</a>
+      <a href="javascript:void(0)" class="btn btn-primary hdr-registration-form-submit">Submit</a>
 
       <div class="gap gap-small"></div>
     </div>
