--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -301,6 +301,15 @@
     p.category-name{
       font-size:13px;
     }
+    p.description{
+      font-size: 14px;
+      margin-bottom: 2px;
+    }
+    a.read-more-link{
+      color: #365271;
+      font-size: 12px;
+      text-decoration: none;
+    }
   }  
 }
 .otp-min-height{
