--- a/app/views/customer/enquiries/show.html.erb
+++ b/app/views/customer/enquiries/show.html.erb
@@ -77,7 +77,7 @@
               <% if @enquiry.status == 'Enquiry' and @enquiry.product.user_id == current_user.id %>
                   <div class="product-detail">
                     <%= simple_form_for [:customer, @enquiry] do |f| %>
-                        <%= f.input :expected_priceexpected_price, label: 'Expected price:', label_html: {class: 'heading'} %>
+                        <%= f.input :expected_price, label: 'Expected price:', label_html: {class: 'heading'} %>
                         <%= f.input :description, label: 'Description:', label_html: {class: 'heading'} %>
                         <%= f.submit 'Send quote', class: 'btn btn-primary'%>
                     <% end %>
