--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -7,7 +7,7 @@
 </header>
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-12">
       <div class="custome-filter-block">
         <aside class="category-filters">
           <div class="category-filters-section">
@@ -52,7 +52,7 @@
       </div>
 
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 col-sm-8 col-xs-12">
       <% if @products.any? %>
           <h3 class="widget-title">Products</h3>
           <div class="owl-carousel owl-loaded owl-nav-out" data-options='{"items":3,"loop":true,"nav":true}'>
