--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,49 +15,73 @@
 <!--slider start-->
 
 <div class="owl-carousel owl-loaded owl-nav-dots-inner" data-options='{"items":1,"loop":true,"autoplay":true,"autoplayTimeout":5000}'>
-  <div class="owl-item">
-    <div class="slider-item" style="background-color:#E3D8FF;">
-      <div class="container">
-        <div class="slider-item-inner">
-          <div class="slider-item-caption-left">
-            <h4 class="slider-item-caption-title">Playstation 4</h4>
-            <p class="slider-item-caption-desc">This is for The Players</p>
-            <!--<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>-->
-          </div>
-          <%= image_tag 'slider_img/slider-img1.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="owl-item">
-    <div class="slider-item" style="background-color:#9ce0e2;" >
-      <div class="container">
-        <div class="slider-item-inner">
-          <%= image_tag 'slider_img/slider-img2.png', class: 'slider-item-img-left'%>
-          <div class="slider-item-caption-right slider-item-caption-white">
-            <h4 class="slider-item-caption-title">Smart Watches</h4>
-            <p class="slider-item-caption-desc">Get One Just from $99</p>
-            <!--<a class="btn btn-lg btn-ghost btn-white" href="#">Shop Now</a>-->
+  <% @advertisements.each do |advertisement|%>
+      <% next unless advertisement.advertisement_images.any? %>
+      <a href="<%= advertisement.redirect_link.present? ? "http://#{advertisement.redirect_link}" : subcategory_path(advertisement.subcategory)%>">
+        <div class="owl-item">
+          <div class="slider-item" style="background-image: url(<%= "#{advertisement.advertisement_images.first.image.url(:original)}" %>)">
+            <div class="container">
+              <div class="slider-item-inner">
+                <div class="slider-item-caption-left">
+                  <h4 class="slider-item-caption-title" style="color:white"><%= advertisement.title %></h4>
+                  <p class="slider-item-caption-desc" style="color:white"><%= advertisement.description %></p>
+                  <!--<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>-->
+                </div>
+                <%#= image_tag 'slider_img/slider-img1.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="owl-item">
-    <div class="slider-item" style="background-color:#E5F54B;">
-      <div class="container">
-        <div class="slider-item-inner">
-          <div class="slider-item-caption-left">
-            <h4 class="slider-item-caption-title">Run! Run! Run!</h4>
-            <p class="slider-item-caption-desc">Your Running Shoes, Right Away.</p>
-            <!--<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>-->
-          </div>
-          <%= image_tag 'slider_img/slider-img3.png', class: 'slider-item-img-right' %>
-        </div>
-      </div>
-    </div>
-  </div>
+      </a>
+
+  <% end %>
 </div>
+
+
+<!--<div class="owl-carousel owl-loaded owl-nav-dots-inner" data-options='{"items":1,"loop":true,"autoplay":true,"autoplayTimeout":5000}'>-->
+  <!--<div class="owl-item">-->
+    <!--<div class="slider-item" style="background-color:#E3D8FF;">-->
+      <!--<div class="container">-->
+        <!--<div class="slider-item-inner">-->
+          <!--<div class="slider-item-caption-left">-->
+            <!--<h4 class="slider-item-caption-title">Playstation 4</h4>-->
+            <!--<p class="slider-item-caption-desc">This is for The Players</p>-->
+            <!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>&ndash;&gt;-->
+          <!--</div>-->
+          <!--<%#= image_tag 'slider_img/slider-img1.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+  <!--<div class="owl-item">-->
+    <!--<div class="slider-item" style="background-color:#9ce0e2;" >-->
+      <!--<div class="container">-->
+        <!--<div class="slider-item-inner">-->
+          <!--<%#= image_tag 'slider_img/slider-img2.png', class: 'slider-item-img-left'%>-->
+          <!--<div class="slider-item-caption-right slider-item-caption-white">-->
+            <!--<h4 class="slider-item-caption-title">Smart Watches</h4>-->
+            <!--<p class="slider-item-caption-desc">Get One Just from $99</p>-->
+            <!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-white" href="#">Shop Now</a>&ndash;&gt;-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+  <!--<div class="owl-item">-->
+    <!--<div class="slider-item" style="background-color:#E5F54B;">-->
+      <!--<div class="container">-->
+        <!--<div class="slider-item-inner">-->
+          <!--<div class="slider-item-caption-left">-->
+            <!--<h4 class="slider-item-caption-title">Run! Run! Run!</h4>-->
+            <!--<p class="slider-item-caption-desc">Your Running Shoes, Right Away.</p>-->
+            <!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>&ndash;&gt;-->
+          <!--</div>-->
+          <!--<%#= image_tag 'slider_img/slider-img3.png', class: 'slider-item-img-right' %>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 <div class="gap"></div>
 <!--slider finish-->
 
