--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -86,7 +86,22 @@
                     <!--</div>-->
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_price, label: 'Expected price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
                       </div>
                     </div>
 
@@ -145,7 +160,22 @@
                     <!--</div>-->
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_price, label: 'Expected price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
                       </div>
                     </div>
 
