--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -34,6 +34,13 @@
         <div class="col-md-12">
           <div class="contact-main-form">
             <%= simple_form_for [:customer, @service] do |f| %>
+                <div>
+                  <%= f.fields_for :service_images do |builder| %>
+                      <%= render partial: 'application/service_image_fields', locals: { f: builder } %>
+                  <%- end %>
+                  <p><%= link_to_add_fields "Add Service Image", f, :service_images %></p>
+                </div>
+
                 <div class="col-xs-12">
                   <div class="field-con">
                     <%= f.input :category_id, collection: service_category_collertion, prompt: 'Select category', label: 'Service Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
