--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -1,9 +1,9 @@
 <div class="fixed-header">
   <div class="global-wrapper clearfix" id="global-wrapper">
-    <div class="navbar-before mobile-hidden">
+    <div class="navbar-before">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-xs-12">
             <ul class="nav navbar-nav navbar-right navbar-right-no-mar">
               <li><a href="/about_us">About Us</a>
               </li>
