--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,106 +1,164 @@
 <div class="searches_main_con">
   <div class="container">
+    <div class="col-md-3">
+      <div class="custome-filter-block">
+        <aside class="category-filters">
+          <div class="category-filters-section">
+            <h3 class="widget-title-sm">Filter</h3>
+          </div>
+          <div class="category-filters-section">
+            <h3 class="widget-title-sm">Price</h3>
+            <!--<input type="text" id="price-slider" />-->
+            <!--<br>-->
+            <!--<br>-->
+            <div class="filter_main_form">
+              <form action="/searches/<%=params[:id]%>">
+                <div class="form-group">
+                  <label>Minimum</label>
+                  <i class="fa fa-inr rupee-icon"></i>
+                  <input type="number" name="min_price" class="form-control set-min-price">
+                </div>
+                <div class="form-group">
+                  <label>Maximum</label>
+                  <i class="fa fa-inr rupee-icon"></i>
+                  <input type="number" name="max_price" class="form-control set-max-price">
+                </div>
+                <div class="form-group">
+                  <label>Minimum Rating</label>
+                  <!--<i class="fa fa-inr rupee-icon"></i>-->
+                  <input type="number" name="rating" class="form-control set-rating">
+                </div>
+                <div class="form-group">
+                  <label>Minimum Product Quantity</label>
+                  <!--<i class="fa fa-inr rupee-icon"></i>-->
+                  <input type="number" name="quantity" class="form-control set-quantity">
+                  <%#= check_box("tag", true, {checked: true}) %>
+                  <!--<input type="checkbox" name="negotiable" class="set-negotiable" > Negotiable-->
+                  <%#= select_tag 'state', options_for_select(state_for_collection), prompt: 'select state', class: 'form-control set-state'%>
+                </div>
+                <input type="submit" class="btn btn-primary">
+              </form>
+            </div>
+            <!--<span class="btn btn-primary filter-evnt"> filter </span>-->
+          </div>
+        </aside>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <% if @results[:products].any? %>
+          <h3>Product:</h3>
+          <% @results[:products].each do |product| %>
+              <div class="search_items">
+                <div class="col-md-1 col-sm-2 col-xs-12">
+                  <% if product.product_images.any? %>
+                      <%= image_tag product.product_images.first.image.url(ProductImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>
+                  <% else %>
+                      <%= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>
+                  <% end %>
 
-    <% if @results[:products].any? %>
-        <h3>Product:</h3>
-        <% @results[:products].each do |product| %>
-            <div class="search_items">
-              <div class="col-md-1 col-sm-2 col-xs-12">
-                <% if product.product_images.any? %>
-                        <%= image_tag product.product_images.first.image.url(ProductImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>
-                <% else %>
-                    <%= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>
-                <% end %>
-
-              </div>
-              <div class="col-md-11 col-sm-10 col-xs-12">
-                <div class="row">
-                  <div class="col-sm-8 col-xs-12">
-                    <h5 class="product-name"><%= product.name %></h5>
-                    <p class="location"><%= product.state.name %></p>
-                  </div>
-                  <div class="col-sm-4 col-xs-12 text-right">
-                    <p class="category-name"><a href="<%=category_path(product.subcategory.category)%>"><%= product.subcategory.category.name %></a> >
-                      <a href="<%=subcategory_path(product.subcategory)%>"><%=product.subcategory.name%></a> </p>
-                  </div>
-                  <div class="col-xs-12">
-                    <p class="description"><%= product.description %></p>
-                    <a class="read-more-link" href="<%= product_path(product) %>">Detail</a>
+                </div>
+                <div class="col-md-11 col-sm-10 col-xs-12">
+                  <div class="row">
+                    <div class="col-sm-8 col-xs-12">
+                      <h5 class="product-name"><%= product.name %></h5>
+                      <p class="location"><%= product.state.name %></p>
+                    </div>
+                    <div class="col-sm-4 col-xs-12 text-right">
+                      <p class="category-name"><a href="<%=category_path(product.subcategory.category)%>"><%= product.subcategory.category.name %></a> >
+                        <a href="<%=subcategory_path(product.subcategory)%>"><%=product.subcategory.name%></a> </p>
+                    </div>
+                    <div class="col-xs-12">
+                      <p class="description"><%= product.description %></p>
+                      <a class="read-more-link" href="<%= product_path(product) %>">Detail</a>
+                    </div>
                   </div>
                 </div>
+                <div class="clearfix"></div>
               </div>
-              <div class="clearfix"></div>
-            </div>
-        <% end %>
-    <% end %>
+          <% end %>
+      <% end %>
 
-    <% if @results[:services].any? %>
-        <h3>Service:</h3>
-        <% @results[:services].each do |service| %>
-            <div class="search_items">
-              <div class="col-md-1 col-sm-2 col-xs-12">
-                <% if service.service_images.any? %>
-                    <%= image_tag service.service_images.first.image.url(ServiceImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>
-                <% else %>
-                    <%= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>
-                <% end %>
-              </div>
-              <div class="col-md-11 col-sm-10 col-xs-12">
-                <div class="row">
-                  <div class="col-sm-8 col-xs-12">
-                    <h5 class="product-name"><%= service.id %></h5>
-                    <p class="location"><%= service.state.name %></p>
-                  </div>
-                  <div class="col-sm-4 col-xs-12 text-right">
+      <% if @results[:services].any? %>
+          <h3>Service:</h3>
+          <% @results[:services].each do |service| %>
+              <div class="search_items">
+                <div class="col-md-1 col-sm-2 col-xs-12">
+                  <% if service.service_images.any? %>
+                      <%= image_tag service.service_images.first.image.url(ServiceImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>
+                  <% else %>
+                      <%= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>
+                  <% end %>
+                </div>
+                <div class="col-md-11 col-sm-10 col-xs-12">
+                  <div class="row">
+                    <div class="col-sm-8 col-xs-12">
+                      <h5 class="product-name"><%= service.id %></h5>
+                      <p class="location"><%= service.state.name %></p>
+                    </div>
+                    <div class="col-sm-4 col-xs-12 text-right">
 
-                    <p class="category-name">
-                      <a href="<%=category_path(service.subcategory.category)%>"><%=service.subcategory.category.name%></a> >
-                      <a href="<%=subcategory_path(service.subcategory)%>"><%=service.subcategory.name%></a>
-                    </p>
-                  </div>
-                  <div class="col-xs-12">
-                    <p class="description"><%= service.service_description %></p>
-                    <a class="read-more-link" href="<%= service_path(service)%>">Detail</a>
+                      <p class="category-name">
+                        <a href="<%=category_path(service.subcategory.category)%>"><%=service.subcategory.category.name%></a> >
+                        <a href="<%=subcategory_path(service.subcategory)%>"><%=service.subcategory.name%></a>
+                      </p>
+                    </div>
+                    <div class="col-xs-12">
+                      <p class="description"><%= service.service_description %></p>
+                      <a class="read-more-link" href="<%= service_path(service)%>">Detail</a>
+                    </div>
                   </div>
                 </div>
+                <div class="clearfix"></div>
               </div>
-              <div class="clearfix"></div>
-            </div>
-        <% end %>
-    <% end %>
+          <% end %>
+      <% end %>
 
-    <% if @results[:advertisements].any? %>
-        <h3>Advertisement:</h3>
-        <% @results[:advertisements].each do |advertisement| %>
-            <div class="search_items">
-              <div class="col-md-1 col-sm-2 col-xs-12">
-                <% if advertisement.advertisement_images.any? %>
-                    <%= image_tag advertisement.advertisement_images.first.image.url(AdvertisementImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>
-                <% else %>
-                    <%= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>
-                <% end %>
-              </div>
-              <div class="col-md-11 col-sm-10 col-xs-12">
-                <div class="row">
-                  <div class="col-sm-8 col-xs-12">
-                    <h5 class="product-name"><%= advertisement.title %></h5>
-                  </div>
-                  <div class="col-sm-4 col-xs-12 text-right">
-                    <p class="category-name">
-                      <a href="<%=category_path(advertisement.subcategory.category)%>"><%=advertisement.subcategory.category.name%></a> >
-                      <a href="<%=subcategory_path(advertisement.subcategory)%>"><%=advertisement.subcategory.name%></a>
-                    </p>
-                  </div>
-                  <div class="col-xs-12">
-                    <p class="description"><%= advertisement.description %></p>
-                    <!--<a class="read-more-link" href="#">View detail</a>-->
+      <% if @results[:advertisements].any? %>
+          <h3>Advertisement:</h3>
+          <% @results[:advertisements].each do |advertisement| %>
+              <div class="search_items">
+                <div class="col-md-1 col-sm-2 col-xs-12">
+                  <% if advertisement.advertisement_images.any? %>
+                      <%= image_tag advertisement.advertisement_images.first.image.url(AdvertisementImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>
+                  <% else %>
+                      <%= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>
+                  <% end %>
+                </div>
+                <div class="col-md-11 col-sm-10 col-xs-12">
+                  <div class="row">
+                    <div class="col-sm-8 col-xs-12">
+                      <h5 class="product-name"><%= advertisement.title %></h5>
+                    </div>
+                    <div class="col-sm-4 col-xs-12 text-right">
+                      <p class="category-name">
+                        <a href="<%=category_path(advertisement.subcategory.category)%>"><%=advertisement.subcategory.category.name%></a> >
+                        <a href="<%=subcategory_path(advertisement.subcategory)%>"><%=advertisement.subcategory.name%></a>
+                      </p>
+                    </div>
+                    <div class="col-xs-12">
+                      <p class="description"><%= advertisement.description %></p>
+                      <!--<a class="read-more-link" href="#">View detail</a>-->
+                    </div>
                   </div>
                 </div>
+                <div class="clearfix"></div>
               </div>
-              <div class="clearfix"></div>
-            </div>
-        <% end %>
-    <% end %>
+          <% end %>
+      <% end %>
+    </div>
+
+
 
   </div>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+
+    $(document).ready(function(){
+        $('.custome-filter-block .set-min-price').val("<%= params[:min_price].present? ?  params[:min_price] : @min_price %>")
+        $('.custome-filter-block .set-max-price').val("<%= params[:max_price].present? ?  params[:max_price] : @max_price %>")
+        $('.custome-filter-block .set-quantity').val("<%= params[:quantity].present? ?  params[:quantity] : 0 %>")
+        $('.custome-filter-block .set-rating').val("<%= params[:rating].present? ?  params[:rating] : 1 %>")
+    });
+
+</script>
