--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -12,20 +12,22 @@
       <table class="table table-striped">
         <thead>
         <tr class="info">
+          <th>Description</th>
           <th>Category</th>
           <th>Subcategory</th>
-          <th>Start at</th>
-          <th>End at</th>
+          <!--<th>Start at</th>-->
+          <!--<th>End at</th>-->
           <th>Action</th>
         </tr>
         </thead>
         <tbody>
         <% @services.each do |service| %>
             <tr class="data">
+              <td><%= service.service_description%></td>
               <td><%= service.subcategory.category.name %></td>
               <td><%= service.subcategory.name %></td>
-              <td><%= service.start_at.strftime(time_format) %></td>
-              <td><%= service.end_at.strftime(time_format) %></td>
+              <!--<td><%#= service.start_at.strftime(time_format) %></td>-->
+              <!--<td><%#= service.end_at.strftime(time_format) %></td>-->
               <td>
                 <%= link_to customer_service_path(service) do %>
                     <i class="fa fa-eye"></i>
