--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -86,22 +86,22 @@
                     <!--</div>-->
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_hour_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_day_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_week_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_month_price}  %>
                       </div>
                     </div>
 
@@ -160,22 +160,22 @@
                     <!--</div>-->
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_hour_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_day_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_week_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_month_price}  %>
                       </div>
                     </div>
 
