--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -39,48 +39,48 @@
 
 
 <!--<div class="owl-carousel owl-loaded owl-nav-dots-inner" data-options='{"items":1,"loop":true,"autoplay":true,"autoplayTimeout":5000}'>-->
-  <!--<div class="owl-item">-->
-    <!--<div class="slider-item" style="background-color:#E3D8FF;">-->
-      <!--<div class="container">-->
-        <!--<div class="slider-item-inner">-->
-          <!--<div class="slider-item-caption-left">-->
-            <!--<h4 class="slider-item-caption-title">Playstation 4</h4>-->
-            <!--<p class="slider-item-caption-desc">This is for The Players</p>-->
-            <!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>&ndash;&gt;-->
-          <!--</div>-->
-          <!--<%#= image_tag 'slider_img/slider-img1.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-  <!--<div class="owl-item">-->
-    <!--<div class="slider-item" style="background-color:#9ce0e2;" >-->
-      <!--<div class="container">-->
-        <!--<div class="slider-item-inner">-->
-          <!--<%#= image_tag 'slider_img/slider-img2.png', class: 'slider-item-img-left'%>-->
-          <!--<div class="slider-item-caption-right slider-item-caption-white">-->
-            <!--<h4 class="slider-item-caption-title">Smart Watches</h4>-->
-            <!--<p class="slider-item-caption-desc">Get One Just from $99</p>-->
-            <!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-white" href="#">Shop Now</a>&ndash;&gt;-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-  <!--<div class="owl-item">-->
-    <!--<div class="slider-item" style="background-color:#E5F54B;">-->
-      <!--<div class="container">-->
-        <!--<div class="slider-item-inner">-->
-          <!--<div class="slider-item-caption-left">-->
-            <!--<h4 class="slider-item-caption-title">Run! Run! Run!</h4>-->
-            <!--<p class="slider-item-caption-desc">Your Running Shoes, Right Away.</p>-->
-            <!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>&ndash;&gt;-->
-          <!--</div>-->
-          <!--<%#= image_tag 'slider_img/slider-img3.png', class: 'slider-item-img-right' %>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
+<!--<div class="owl-item">-->
+<!--<div class="slider-item" style="background-color:#E3D8FF;">-->
+<!--<div class="container">-->
+<!--<div class="slider-item-inner">-->
+<!--<div class="slider-item-caption-left">-->
+<!--<h4 class="slider-item-caption-title">Playstation 4</h4>-->
+<!--<p class="slider-item-caption-desc">This is for The Players</p>-->
+<!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>&ndash;&gt;-->
+<!--</div>-->
+<!--<%#= image_tag 'slider_img/slider-img1.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="owl-item">-->
+<!--<div class="slider-item" style="background-color:#9ce0e2;" >-->
+<!--<div class="container">-->
+<!--<div class="slider-item-inner">-->
+<!--<%#= image_tag 'slider_img/slider-img2.png', class: 'slider-item-img-left'%>-->
+<!--<div class="slider-item-caption-right slider-item-caption-white">-->
+<!--<h4 class="slider-item-caption-title">Smart Watches</h4>-->
+<!--<p class="slider-item-caption-desc">Get One Just from $99</p>-->
+<!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-white" href="#">Shop Now</a>&ndash;&gt;-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="owl-item">-->
+<!--<div class="slider-item" style="background-color:#E5F54B;">-->
+<!--<div class="container">-->
+<!--<div class="slider-item-inner">-->
+<!--<div class="slider-item-caption-left">-->
+<!--<h4 class="slider-item-caption-title">Run! Run! Run!</h4>-->
+<!--<p class="slider-item-caption-desc">Your Running Shoes, Right Away.</p>-->
+<!--&lt;!&ndash;<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>&ndash;&gt;-->
+<!--</div>-->
+<!--<%#= image_tag 'slider_img/slider-img3.png', class: 'slider-item-img-right' %>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 <!--</div>-->
 <div class="gap"></div>
 <!--slider finish-->
@@ -217,41 +217,42 @@
           <div class="gap"></div>
       <% end %>
 
-      <% if @advertisements.any? %>
-          <!--categories Start-->
-          <h3 class="widget-title">Advertisements</h3>
-          <div class="owl-carousel owl-loaded owl-nav-out" data-options='{"items":4,"loop":true,"nav":true}'>
-            <% @advertisements.each do |advertisement| %>
-                <div class="owl-item">
-                  <div class="product  owl-item-slide">
-                    <ul class="product-labels"></ul>
-                    <div class="product-img-wrap">
-                      <% if advertisement.advertisement_images.any? %>
-                          <%= image_tag advertisement.advertisement_images.first.image(:size_500x500), class: 'img-responsive' %>
-                      <% else %>
-                          <%= image_tag "theme_img/500x500.png", class: 'product-img' %>
-                      <% end %>
-                      <%#= image_tag 'theme_img/500x500.png', class: 'product-img', alt: '' %>
-                    </div>
-                    <a class="product-link" href="#"></a>
-                    <div class="product-caption">
-                      <h5 class="product-caption-title">
-                        <%= advertisement.title %>
-                      </h5>
-                      <div class="product-caption-price">
-                  <span class="product-caption-price-new">
-                    ₹<%= advertisement.per_hour_cost %>
-                  </span>
+      <%# if @advertisements.any? %>
+      <!--categories Start-->
+      <!--<h3 class="widget-title">Advertisements</h3>-->
+      <!--<div class="owl-carousel owl-loaded owl-nav-out" data-options='{"items":4,"loop":true,"nav":true}'>-->
+      <!--<%# @advertisements.each do |advertisement| %>-->
+      <!--<div class="owl-item">-->
+      <!--<div class="product  owl-item-slide">-->
+      <!--<ul class="product-labels"></ul>-->
+      <!--<div class="product-img-wrap">-->
+      <!--<%# if advertisement.advertisement_images.any? %>-->
+      <!--<%#= image_tag advertisement.advertisement_images.first.image(:size_500x500), class: 'img-responsive' %>-->
+      <!--<%# else %>-->
+      <!--<%#= image_tag "theme_img/500x500.png", class: 'product-img' %>-->
+      <!--<%# end %>-->
+      <!--<%#= image_tag 'theme_img/500x500.png', class: 'product-img', alt: '' %>-->
+      <!--</div>-->
+      <!--<a class="product-link" href="#"></a>-->
+      <!--<div class="product-caption">-->
+      <!--<h5 class="product-caption-title">-->
+      <!--<%#= advertisement.title %>-->
+      <!--</h5>-->
+      <!--<div class="product-caption-price">-->
+      <!--<span class="product-caption-price-new">-->
+      <!--₹-->
+      <%#= advertisement.per_hour_cost %>
+      <!--</span>-->
 
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            <% end %>
-          </div>
-          <div class="gap"></div>
-          <!--categories finish-->
-      <% end %>
+      <!--</div>-->
+      <!--</div>-->
+      <!--</div>-->
+      <!--</div>-->
+      <!--<%# end %>-->
+      <!--</div>-->
+      <!--<div class="gap"></div>-->
+      <!--categories finish-->
+      <%# end %>
     </div>
 
   </div>
